<resources>
    <string name="app_name">Ejercicios_Clase</string>
    <string name="saludo">Saludar</string>
    <string name="noSaludo">No Saludar</string>
    <string name="saludoClase">Saludar clase</string>
    <string name="primerAc">Iniciar Activity 1</string>
    <string name="segundoAc">Iniciar Activity 2</string>
    <string name="acVolver">Volver a la Activity Principal</string>
    <string name="initAc">Iniciando Activity Datos</string>
    <string name="acIniciado">Estamos en el Activity Datos</string>
    <string name="boton_llamada">Boton De LLamada</string>
    <string name="boton_internet">Boton De Internet</string>
    <string name="boton_alarma">Boton De Alarma</string>
    <string name="boton_ajustes">Boton De Ajustes</string>
    <string name="imagen_personaje">Imagen De Personaje</string>
    <string name="Marca_Ruben">Rubin De Haro Sánchez</string>
    <string name="marcar_llamada">Marcar tu el número</string>
    <string name="llamar_directo">Llamar directamente</string>
    <string name="texto_llamada_default">Escribe un número para llamar</string>
    <string name="descripcion_boton_llamada_2">Pulsa para llamar al número indicado</string>
    <string name="saltar">Saltar</string>
    <string name="borrar_calculadora">AC</string>
    <string name="cambiar_signo">+/-</string>
    <string name="porcentaje">%</string>
    <string name="dividir">/</string>
    <string name="numero_7">7</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="multiplicar">X</string>
    <string name="igual">=</string>
    <string name="decimales">.</string>
    <string name="numero_0">0</string>
    <string name="sumar">+</string>
    <string name="numero_3">3</string>
    <string name="numero_2">2</string>
    <string name="numero_1">1</string>
    <string name="restar">-</string>
    <string name="numero_6">6</string>
    <string name="numero_5">5</string>
    <string name="numero_4">4</string>
    <string name="limpiar_calculadora">DEL</string>
    <string name="autor">Ruben</string>
    <string name="Explicacion_Juego_Dado">El cerdo consiste en tirar el dado las veces que quieras sumando los resultados, pero si el resultado es uno, tu total actual será el cociente del número que hayas sacado anteriormente. Gana quien consiga más puntos.</string>
    <string name="Titulo_Juego_Dado">El Cerdo</string>
    <string name="fin_Turno">Finalizar turno</string>
    <string name="player_1">Jugador 1</string>
    <string name="player_2">Jugador 2</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenna">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarte">Registrar Usuario</string>
    <string name="confirmar_contrasenna">Confirmar Contraseña</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="tipoUsuario">Tipo De Usuario</string>
    <string name="aceptar_condiciones">Aceptar Las Condiciones</string>
    <string name="titulo">Título:\t</string>
    <string name="genero">Género:\t</string>
    <string name="nota">Nota:\t</string>
    <string name="fecha_salida">Fecha De Salida:\t</string>
    <string name="imagen">Imagen:\t</string>
    <string name="portada">Portada</string>
    <string name="boton_editar">Boton Editar</string>
    <string name="boton_eliminar">Boton Eliminar</string>
    <string name="existe_campo_vacio">Existe algún campo vacío</string>
    <string name="datos_introducidos_incorrectos">Usuario o contraseña introducidos incorrectos</string>
    <string name="claves_no_coinciden">Las contraseñas no coinciden</string>
    <string name="debes_aceptar_condiciones">Debes aceptar las condiciones</string>
    <string name="clave_administrador_erronea">Contraseña de administrador erronea</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string-array name="opciones_spinner">
        <item>Administrador</item>
        <item>Docente</item>
        <item>Alumno</item>
        <item>Beta-Tester</item>
    </string-array>

    <string-array name="imagenesVideojuego">
        <item>Zelda: BOTW</item>
        <item>Zelda: TOTK</item>
        <item>Red Dead Redemption 1</item>
        <item>Red Dead Redemption 2</item>
        <item>No Mans Sky</item>
        <item>Call Of Duty: Black Ops 3</item>
        <item>Grand Theft Auto V</item>
        <item>Elden Ring</item>
        <item>Juego Generico</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
</resources>