<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Editar Videojuego"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"/>

    <EditText
        android:id="@+id/tituloVideojuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Título"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero"/>

    <EditText
        android:id="@+id/generoVideojuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Género"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/notasVideojuego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/notaVideojuego1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_1"/>

            <RadioButton
                android:id="@+id/notaVideojuego2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_2"/>

            <RadioButton
                android:id="@+id/notaVideojuego3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_3"/>

            <RadioButton
                android:id="@+id/notaVideojuego4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_4"/>

            <RadioButton
                android:id="@+id/notaVideojuego5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_5"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_salida"/>

    <Button
        android:id="@+id/fechaVideojuegoBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagen"/>

    <Spinner
        android:id="@+id/imagenVideojuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/imagenesVideojuego"/>

</LinearLayout>