<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/NegroFondo"
    tools:context=".LlamadaActivity">

    <ImageButton
        android:id="@+id/volverBt"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="10dp"
        android:background="@drawable/borde_redondo"
        android:src="@drawable/volver_logo"
        android:scaleType="centerCrop"
        android:translationY="20dp"
        android:translationX="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/CuadroTelefono"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@color/Blanco"
            android:textAlignment="center"
            android:textSize="20dp"
            android:hint="@string/texto_llamada_default"/>

        <ImageButton
            android:id="@+id/LlamadaDirectaBt"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/borde_redondo"
            android:layout_marginVertical="30dp"
            android:src="@drawable/llamada_logo"
            android:scaleType="fitXY"
            android:padding="10dp"
            android:contentDescription="@string/llamar_directo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/descripcion_boton_llamada_2"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/Blanco"/>

    </LinearLayout>

</LinearLayout>