<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NegroFondo"
    android:gravity="center"
    android:paddingBottom="150dp"
    tools:context=".InicioSesionActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/usuario_hombre_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/Blanco"
                android:textSize="25sp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/usuarioEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/Blanco"
                android:hint="@string/usuario"
                android:paddingStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/contrasenna"
                android:textColor="@color/Blanco"
                android:textSize="25sp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/contrasennaEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/Blanco"
                android:hint="@string/contrasenna"
                android:inputType="textPassword"
                android:paddingStart="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/RojoOscuro"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/iniciarSesionBt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_redondo"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginHorizontal="10dp"/>

            <Button
                android:id="@+id/registrarUsuarioBt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_redondo"
                android:text="@string/registrarte"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>