<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NegroFondo"
    tools:context=".data.ui.views.RegistrarUsuarioActivity">

    <ImageButton
        android:id="@+id/volverBt"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="10dp"
        android:background="@drawable/borde_redondo"
        android:src="@drawable/volver_logo"
        android:scaleType="centerCrop"
        android:translationY="20dp"
        android:translationX="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/usuario_hombre_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:text="@string/usuario"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Blanco"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/usuarioEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Blanco"
                    android:textColor="@color/Negro"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:hint="@string/usuario"
                    android:textColorHint="@color/Negro"
                    android:paddingStart="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:text="@string/email"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Blanco"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Blanco"
                    android:textColor="@color/Negro"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:hint="@string/email"
                    android:textColorHint="@color/Negro"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:text="@string/confirmar_email"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Blanco"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/confirmarEmailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Blanco"
                    android:textColor="@color/Negro"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:hint="@string/email"
                    android:textColorHint="@color/Negro"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:text="@string/contrasenna"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Blanco"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/contrasennaEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Blanco"
                    android:textColor="@color/Negro"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:hint="@string/contrasenna"
                    android:textColorHint="@color/Negro"
                    android:inputType="textPassword"
                    android:paddingStart="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:text="@string/confirmar_contrasenna"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Blanco"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/confirmarContrasennaEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Blanco"
                    android:textColor="@color/Negro"
                    android:fontFamily="@font/unigeo64_light_trial"
                    android:hint="@string/contrasenna"
                    android:textColorHint="@color/Negro"
                    android:inputType="textPassword"
                    android:paddingStart="5dp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/aceptarCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/Blanco"
                android:fontFamily="@font/unigeo64_light_trial"
                android:text="@string/aceptar_condiciones"
                android:textAlignment="center"
                android:textColor="@color/Blanco"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unigeo64_light_italic_trial"
                android:textAlignment="center"
                android:textColor="@color/RojoOscuro"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/registrarUsuarioBt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/borde_redondo"
                    android:padding="10dp"
                    android:fontFamily="@font/unigeo64_bold_trial"
                    android:text="@string/registrarte"
                    android:textColor="@color/Blanco"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>